# admet

./: .gitmodules  pixi.toml  pyproject.toml
admet_pipeline/cli/: main.py
admet_pipeline/core/: aggregate.py  catalog.py  runner.py  screen.py
admet_pipeline/endpoints/: parser.py
admet_pipeline/endpoints/generalist/admet_ai/: main.py  pixi.toml
admet_pipeline/endpoints/structural_alerts/: aggregate.py
admet_pipeline/endpoints/structural_alerts/pains_brenk/: main.py  pixi.toml
admet_pipeline/endpoints/synthesizability/rascore/: main.py  pixi.toml
admet_pipeline/endpoints/synthesizability/sascore/: main.py  pixi.toml
