[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "admet"
version = "0.1"

[project.scripts]
admet = "admet_pipeline.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["admet_pipeline"]  

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
admet = { path = ".", editable = true }